Refactor: 입력한 값에 따른 결과값출력 메소드 분리